@@ -1,3 +1,9 @@
+2007-01-20 Jens Tkotz <jens@peino.de> 1.5.6-svn-b4
+
+ * Fix: Login was broken in b1.
+
+ Thanks to Brian Rademacher!
+
 2007-01-02 Jens Tkotz <jens@peino.de> 1.5.6-svn-b3
 
  * Change: Update Copyright to 2007
